Fix Modal css on mobile landscape

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -257,12 +257,21 @@ button:focus {
 	.form-control {
 		font-size: 10px;
 	}
-
-}
-@media only screen and (max-width: 480px) {
-	h1 {
-		font-size: 30px;
-		line-height: 30px;
+	.modal .modal-header .modal-title {
+		font-size: 20px;
+		line-height: 25px;
+	}
+	.modal .modal-dialog {
+		width: auto;
+	}
+	.modal .modal-body {
+		padding: 0 1rem;
+	}
+	.button {
+		font-size: 10px;
+		line-height: 22px;
+		padding: 2px 5px;
+		min-width: 130px;
 	}
 	.row.button-container {
 		width: 100%;
@@ -270,6 +279,15 @@ button:focus {
 	.row .width-95.button {
 		width: 100%;
 		margin-bottom: 10px;
+	}
+}
+@media only screen and (max-width: 480px) {
+	h1 {
+		font-size: 30px;
+		line-height: 30px;
+	}
+	.modal .modal-dialog {
+		width: 280px;
 	}
 	.nav.nav-tabs .nav-item .nav-link {
 		padding: 12px 0px;
